# cxxmqueues

./: .gitignore  CMakeLists.txt  README.md  bld.sh  commit.sh
include/: simple_broker.hpp
src/: main.cpp  simple_broker.cpp
